add home button to results page and fix presentation header

--- a/views/show_day.html.twig
+++ b/views/show_day.html.twig
@@ -7,8 +7,9 @@
     </head>
     <body>
         <div class="container">
-            <h1>{{date}} was a:</h1>
+            <h1>{{date}} falls on a:</h1>
             <h4>{{ results }}</h4>
+             <a href='/'><button type='button'>Home</button></a>
         </div>
     </body>
 </html>
