--- a/views/form.html.twig
+++ b/views/form.html.twig
@@ -9,7 +9,7 @@
             <h1>Day of Week from Date Calculator</h1>
             <h3>Input a date to find out what day of the week it falls on!</h3>
             <form action="/see_day">
-                <input type="date" name="date">
+                <input type="date" name="date" required>
                 <button type="submit" name="button">Submit</button>
             </form>
         </div>
